# TestTask

./: .gitmodules  CMakeLists.txt  README.md
include/: storage.h
include/FastMap/: Rectangle.h  config.h
src/: main.cpp  storage.cpp
tbb2019_20181203oss/cmake/: TBBConfig.cmake
tbb2019_20181203oss/lib/universal/: libtbb.dylib  libtbb_debug.dylib  libtbb_preview.dylib  libtbb_preview_debug.dylib  libtbbmalloc.dylib  libtbbmalloc_debug.dylib  libtbbmalloc_proxy.dylib  libtbbmalloc_proxy_debug.dylib
tests/: CMakeLists.txt  storage_tests.cpp  unit_tests.cpp
